# qemu

./: mail.txt  meson.build
.gitlab-ci.d/: buildtest.yml  cirrus.yml
accel/tcg/: cputlb.c
configs/devices/arm-softmmu/: default.mak
docs/devel/: testing.rst
docs/system/: target-arm.rst
docs/system/arm/: raspi_pico.rst  rp2040.rst
hw/arm/: Kconfig  meson.build  raspi_pico.c  rp2040_soc.c
hw/char/: meson.build  rp2040_uart.c
hw/core/: qdev.c
hw/gpio/: meson.build  rp2040_gpio.c  rp2040_sio.c
hw/misc/: meson.build  rp2040_clocks.c  rp2040_pads.c  rp2040_pll.c  rp2040_resets.c  rp2040_sio.c  rp2040_ssi.c  rp2040_utils.c  rp2040_vreg.c  rp2040_xip.c  rp2040_xosc.c
hw/ssi/: meson.build  rp2040_ssi.c
hw/timer/: meson.build  rp2040_timer.c
include/hw/: irq.h
include/hw/arm/: rp2040_soc.h
include/hw/char/: rp2040_uart.h
include/hw/gpio/: rp2040_gpio.h  rp2040_sio.h
include/hw/misc/: rp2040_clocks.h  rp2040_pads.h  rp2040_pll.h  rp2040_resets.h  rp2040_sio.h  rp2040_ssi.h  rp2040_utils.h  rp2040_vreg.h  rp2040_xip.h  rp2040_xosc.h  unimp.h
include/hw/ssi/: rp2040_ssi.h
include/hw/timer/: rp2040_timer.h
pc-bios/: meson.build
qom/: object.c
scripts/: checkpatch.pl
softmmu/: cpus.c
tests/: Makefile.include  meson.build
tests/avocado/: machine_raspi_pico.py
tests/module/: dummy_test.c  meson.build  module_test_init.c  module_test_init.h  module_test_main.c  qmodule_test.c  qmodule_test.h  valgrind.supp
tests/module/hw/: meson.build
tests/module/hw/arm/: meson.build
tests/module/hw/arm/rp2040/: meson.build  rp2040_gpio-tests.c
tests/module/hw/gpio/: meson.build  rp2040_gpio-tests.c  rp2040_qspi-tests.c  rp2040_sio-tests.c
tests/module/hw/misc/: meson.build  rp2040_resets-tests.c
tests/module/hw/ssi/: meson.build  rp2040_ssi-tests.c
tests/qtest/: libqtest.c  meson.build  rp2040_gpio-test.c
